# 4sem

lesson1/: CMakeLists.txt  circle.cpp  cube.cpp  cylinder.cpp  model.cpp  model.stl  tor.cpp
lesson2/: CMakeLists.txt  links.txt  model.cpp
lesson3/: CMakeLists.txt  poisson.cpp  poisson.h
mp_cgal_meshing/: Polyhedron.cpp  Polyhedron.h  fix_off.cpp  fix_off_file.cpp  mesh.cpp  msh_to_off.py
